# imdb-sql

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yml  imdb-sql.py  pyproject.toml
.github/workflows/: chore.yml  quality.yml
env.d/: mariadb  postgresql
