[tool.poetry]
name = "imdb-sql"
version = "0.1.0"
description = "Load IMDB datasets in a SQL database."
authors = ["Julien Maupetit <julien@maupetit.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
rich = "^13.7.1"
tabulate = "^0.9.0"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
