[tool.poetry]
name = "imdb-sql"
version = "0.1.0"
description = "Load IMDB datasets in a SQL database."
authors = ["Julien Maupetit <julien@maupetit.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
pandas = "^2.2.2"
python = "^3.12"
rich = "^13.7.1"
sqlalchemy = "^2.0.32"
tabulate = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.13.0"
ruff = "^0.6.2"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = []

[tool.ruff.lint]
select = [
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "D",  # pydocstyle
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # Isort
    "ISC",  # flake8-implicit-str-concat
    "PLC",  # Pylint Convention
    "PLE",  # Pylint Error
    "PLR",  # Pylint Refactor
    "PLW",  # Pylint Warning
    "RUF100",  # Ruff unused-noqa
    "S",  # flake8-bandit
    "T20", # flake8-print
    "W",  # pycodestyle warning
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # use of assert
]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"

[tool.mypy]
files = "./**/*.py"
exclude = []
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
